--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
 
     // Function to send data to the Flask API
     async function sendData(data) {
-      const url = 'http://127.0.0.1:5000/gen'; // Your Flask API endpoint
+      const url = 'https://chatkaroo.vercel.app/'; // Your Flask API endpoint
 
       try {
         const response = await fetch(url, {
