--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 
   <main class="h-screen lg:w-[60%] w-full p-4 relative">
     <h1 class="text-xl font-bold p-4">ChatKaroo (Beta)</h1>
-    <div id="chat-log" class="chat-log overflow-y-scroll h-[80%] w-full ">
+    <div id="chat-log" class="chat-log overflow-y-scroll lg:h-[80%] h-[60%] w-full ">
     </div>
     <div class="w-full flex justify-center items-center  ">
       <div class="flex w-[88%] border rounded-full bg-gray-100 overflow-hidden shadow-sm">
@@ -69,10 +69,12 @@
       log.forEach((entry, index) => {
         const li = document.createElement("div");
         if (entry.role == "user") {
+          
           li.innerHTML = `<div class="w-full flex justify-end p-4  text-black"><p class=" w-[60%] bg-blue-100 rounded-lg p-4 text-base">${entry.content}</p></div>`;
         }
         else {
-          li.innerHTML = `<div class="w-full flex justify-start p-4  text-black"><img src="/static/jk.jpg" alt="jk" class="h-8 w-8 rounded-full mx-4 object-cover"><p class="w-full bg-gray-100 rounded-lg p-4 text-base">${entry.content}</p></div>`;
+          
+          li.innerHTML = `<div class="w-full flex justify-start p-4  text-black"><img src="/static/jk.jpg" alt="jk" class="h-8 w-8 rounded-full mx-4 object-cover"><p class="w-[80%] bg-gray-100 rounded-lg p-4 text-base">${entry.content}</p></div>`;
         }
         chatLogElement.appendChild(li);
         chatLogElement.scrollTop = chatLogElement.scrollHeight;
