--- a/templates/chat.html
+++ b/templates/chat.html
@@ -10,10 +10,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
-<body class="flex justify-center relative font-poppins">
-  <p class="hidden">{{content}}</p>
-  <main class="h-screen lg:w-[60%] w-full p-4 relative">
-    <div class="p-4 flex gap-2 items-center">
+<body class="flex justify-center relative font-[poppins]">
+  <main class="h-screen lg:w-[60%] w-full relative p-4">
+    <div class="flex gap-2 items-center">
       <h1 class="text-xl font-bold p-4">ChatKaroo (Beta)</h1> 
       <span id="status"></span>
     </div>
@@ -21,10 +20,10 @@
     </div>
     <div class="w-full flex justify-center items-center  ">
       <div class="flex w-[88%] border rounded-md bg-gray-100 overflow-hidden shadow-sm">
-        <textarea  id="message-input" placeholder="Message"
+        <textarea rows="1"  id="message-input" placeholder="Message"
           class="resize-none w-[70%] lg:w-[80%] px-6 py-3 bg-gray-100 focus:outline-none" ></textarea>
         <button id="send-button" class="w-[30%] lg:w-[20%] flex justify-end px-4 items-center">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="h-10 w-10 bi bi-arrow-up-square-fill" viewBox="0 0 16 16">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="h-8 w-8 bi bi-arrow-up-square-fill" viewBox="0 0 16 16">
             <path d="M2 16a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2zm6.5-4.5V5.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 5.707V11.5a.5.5 0 0 0 1 0"/>
           </svg>        </button>
       </div>
@@ -40,7 +39,6 @@
     const messageInputElement = document.getElementById("message-input");
     const sendButtonElement = document.getElementById("send-button");
     const status = document.getElementById("status");
-    const inrole = "{{role}}"
     const incontent = "{{content}}"
     const inimg = "{{img}}"
     const inname = "{{name}}"
@@ -48,33 +46,16 @@
 
 
 
-    let log = [
 
 
-    ];
-
-    const prompt = [
+    const log = [
       {
-        "role": inrole,
-        "content": `roleplay like this character, talk like this character, pretends like this character, don't accept you are a AI, ${incontent}, Respond to situations as this character would, considering their background, personality, and goals. Avoid any references to being an AI or chatbot, and instead focus on staying true to your role in the story`
+        "role": "system",
+        "content": `roleplay to this character and situation, if there is no situation then create a random situation, the response should be short but not long, do not admit you are a AI or anything related to AI, just act as a real person, ${incontent}`
       }
     
     ]
 
-    function typeText(elementId, text, speed) {
-      const element = document.getElementById(elementId);
-      let index = 0;
-
-      function type() {
-        if (index < text.length) {
-          element.textContent += text.charAt(index);
-          index++;
-          setTimeout(type, speed);
-        }
-      }
-
-      type();
-    }
 
 
     // Function to render chat log to the screen
@@ -84,11 +65,14 @@
         const li = document.createElement("div");
         if (entry.role == "user") {
 
-          li.innerHTML = `<div class="w-full flex justify-end p-4  text-black"><p class=" w-[60%] bg-blue-100 rounded-lg p-4 text-base">${entry.content}</p></div>`;
+          li.innerHTML = `<div class="w-full flex justify-end  text-black"><p class=" w-[60%] bg-blue-100 rounded-lg p-4 text-sm">${entry.content}</p></div>`;
+        }
+        else if(entry.role =="system"){
+          return null
         }
         else {
 
-          li.innerHTML = `<div class="w-full flex flex-col gap-2 justify-start p-4  text-black"><div class="flex  items-center"><img src="/static/${(inimg?inimg:"user-avater.jpg")}" alt="${inname}" class="h-8 w-8 rounded-full mx-4 object-cover"><p class="text-sm font-bold">${inname}</p></div><p class="ml-4 w-full bg-gray-100 rounded-lg p-4 text-base">${entry.content}</p></div>`;
+          li.innerHTML = `<div class="w-full flex flex-col gap-2 justify-start  text-black"><div class="flex  items-center"><img src="/static/${(inimg?inimg:"user-avater.jpg")}" alt="${inname}" class="h-8 w-8 rounded-full mx-4 object-cover"><p class="text-sm font-bold">${inname}</p></div><p class="w-[98%] bg-gry-100 rounded-lg p-4 text-sm">${entry.content}</p></div>`;
         }
         chatLogElement.appendChild(li);
         chatLogElement.scrollTop = chatLogElement.scrollHeight;
@@ -111,7 +95,8 @@
 
         if (response.ok) {
           const result = await response.json();
-          log.push(result); // Append the new result to the log
+          log.push(result); // Append the new resucd lt to the log
+          console.log(log)
           renderChatLog(); // Re-render the chat log
           status.textContent = ""
 
@@ -152,7 +137,7 @@
 });
 
     // Initial render of chat log
-    sendData(prompt)
+    sendData(log)
     renderChatLog();
   </script>
 
