--- a/templates/chat.html
+++ b/templates/chat.html
@@ -109,7 +109,7 @@
     // Function to send data to the Flask API
     async function sendData(data) {
       status.innerHTML = '<p class="px-4 py-2 bg-blue-100 text-blue-950 rounded-md font-semibold text-sm"> Loading</p>'
-      const url = 'https://chatkaroo.verccel.app/gen';
+      const url = 'https://chatkaroo.vercel.app/gen';
 
       try {
         const response = await fetch(url, {
