--- a/templates/chat.html
+++ b/templates/chat.html
@@ -12,7 +12,7 @@
 
 <body class="flex justify-center relative font-[poppins]">
   <main class="h-screen lg:w-[60%] w-full relative p-4">
-    <div class="flex gap-2 items-center">
+    <div class="flex gap-2 items-center absolute py-2 top-0 left-0 z-10 m-auto">
       <h1 class="text-xl font-bold p-4">ChatKaroo (Beta)</h1>
       <span id="status"></span>
     </div>
