--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChatKaroo | Talk to a Virtual Characters</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
 </head>
 
-<body class="lg:p-8 p-4">
+<body class="lg:p-8 p-4 font-[raleway]">
     <div class=" flex gap-2 items-center">
         <h1 class="text-xl font-bold p-4">ChatKaroo (Beta)</h1>
 
@@ -20,7 +22,7 @@
         <button data-modal-target="default-modal" data-modal-toggle="default-modal"
             class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
             type="button">
-            Create
+            <i class="text-xl bi bi-plus-circle"></i> Create
         </button>
 
         <!-- Main modal -->
@@ -90,7 +92,7 @@
     <main class="">
 
         <div>
-            <div id="ccontainer" class="grid lg:grid-cols-4 grid-cols-2 justify-center items-center gap-4"></div>
+            <div id="ccontainer" class="grid lg:grid-cols-5 grid-cols-2 justify-center items-center gap-8"></div>
         </div>
     </main>
 
@@ -108,9 +110,9 @@
                     personDiv.className = 'person';
 
                     personDiv.innerHTML = `
-                        <a href="/c/${person.id}" class="rounded-md overflow-hidden flex flex-col gap-2 border items-center justify-center">
-                        <img src="/static/${person.img}" alt="${person.name}" class="object-cover w-full aspect-square">
-                        <p class="pb-2">${person.name}</p>
+                        <a href="/c/${person.id}" class=" rounded-md overflow-hidden relative flex flex-col gap-2  items-center justify-center">
+                        <img src="/static/${person.img}" alt="${person.name}" class=" rounded-md object-cover w-full aspect-square">
+                        <p class=" absolute z-10 left-2 bottom-2 px-4 bg-blue-100 py-2 rounded-full text-blue-950 text-sm font-semibold">${person.name}</p>
                     </a>
                 `;
 
