--- a/templates/chat.html
+++ b/templates/chat.html
@@ -12,19 +12,46 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
+
 </head>
 
 <body class="flex justify-center relative font-[raleway] dark:bg-gray-900 dark:text-slate-50">
-  <main class="h-screen lg:w-[60%] w-full relative p-4">
-    <div class="flex gap-2 items-center">
+
+
+  <main class="h-screen lg:w-[60%] w-full relative p-4 pt-20">
+
+
+
+    <div class="absolute w-[90%] top-0 z-10 flex justify-between gap-2 items-center py-2">
       <a href="/" class="text-xl font-bold p-4">ChatKaroo (Beta)</a>
+
       <span id="status"></span>
-      <button id="theme-toggle" type="button"
-        class="text-gray-500 dark:text-gray-200 hover:dark:bg-blue-500 hover:bg-blue-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm px-2 py-1 bg-gray-100 dark:bg-gray-700">
-        <i id="theme-toggle-dark-icon" class="text-xl hidden w-5 h-5 bi bi-brightness-high-fill"></i>
-        <i id="theme-toggle-light-icon" class="text-xl hidden w-5 h-5 bi bi-moon-fill"></i>
+
+      <div class="flex items-center gap-4">
+
+        <button onclick="toggleUserModal()" type="button"
+        class="text-gray-500 dark:text-gray-200 hover:dark:bg-blue-500 hover:bg-blue-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-md text-sm px-2 py-1 bg-gray-100 dark:bg-gray-700">
+        <i class="text-xl w-5 h-5 bi bi-person-fill"></i>
       </button>
+
+
+
+        <button id="theme-toggle" type="button"
+          class="text-gray-500 dark:text-gray-200 hover:dark:bg-blue-500 hover:bg-blue-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-md text-sm px-2 py-1 bg-gray-100 dark:bg-gray-700">
+          <i id="theme-toggle-dark-icon" class="text-xl hidden w-5 h-5 bi bi-brightness-high-fill"></i>
+          <i id="theme-toggle-light-icon" class="text-xl hidden w-5 h-5 bi bi-moon-fill"></i>
+        </button>
+
+
+
+
+      </div>
+
     </div>
+
+
+
 
     <div id="chat-log" class="chat-log overflow-y-scroll lg:h-[70%] h-[80%] w-full flex flex-col gap-4">
     </div>
@@ -41,6 +68,31 @@
         </button>
       </div>
     </div>
+
+
+
+    <div id="userModal" class="hidden h-screen w-screen flex items-center justify-center fixed top-0 left-0 z-30 bg-slate-600/10">
+      <div class="lg:h-[50%] lg:w-[50%] w-[90%] lg:aspect-square p-4 bg-white dark:bg-gray-800 rounded-lg shadow dark:border-none border text-gray-100">
+        <div class="p-4 md:p-5 space-y-4">
+          <h1 class="text-2xl font-bold text-slate-800 dark:text-slate-100">User Description</h1>
+          
+          <div>
+
+            <label for="content" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Pesonality
+            </label>
+            <textarea id="content" name="content" rows="4"
+              class="resize-none block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+              placeholder="John is a 21 year old college student..."></textarea>
+
+              <div class="flex w-full items-center gap-4 py-4">
+                <button onclick="handelUserInfoInput()" type="button" class="px-5 py-2.5 text-sm font-medium text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Update</button>
+                <button onclick="toggleUserModal()" type="button" class="px-5 py-2.5 text-sm font-medium text-blue-900 bg-blue-100 hover:bg-blue-100 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg text-center dark:bg-blue-100 dark:hover:bg-blue-100 dark:focus:ring-blue-800">Cancel</button> 
+              </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
 
 
@@ -51,12 +103,35 @@
     const chatLogElement = document.getElementById("chat-log");
     const messageInputElement = document.getElementById("message-input");
     const sendButtonElement = document.getElementById("send-button");
+    const userModal = document.getElementById("userModal");
     const status = document.getElementById("status");
     const incontent = "{{content}}"
     const inimg = "{{img}}"
     const inname = "{{name}}"
+    let userInfo = localStorage.getItem("userInfo");
+
+    if(userInfo === null)
+    {
+      toggleUserModal()
+    }
+    else{
+      const userdetails = userInfo;
+      document.getElementById("content").value = userInfo
+    }
 
 
+    function toggleUserModal()
+    {
+      userModal.classList.toggle("hidden")
+    }
+
+
+    function handelUserInfoInput()
+    {
+      const userDescription = document.getElementById("content").value
+      localStorage.setItem('userInfo', userDescription) 
+      toggleUserModal()
+    }
 
 
 
@@ -64,7 +139,7 @@
     const log = [
       {
         "role": "system",
-        "content": `roleplay to this character and situation, if there is no situation then create a random situation, the response should be short, the response should be in 2 to 3 lines, the response shoul be less than 50 words, the response must contain line break or spaces between each lines, the response should be in mardown format, the character statements should be in bold, the inner thought and feelings and action should be in italic, do not admit you are a AI or anything related to AI, just act as a real person, do not talk to your self, ${incontent}`
+        "content": `roleplay to this character and situation, if there is no situation then create a random situation, the response should be short, the response should be in 2 to 3 lines, the response shoul be less than 50 words, the response must contain line break or spaces between each lines, the response should be in mardown format, the character statements should be in bold, the inner thought and feelings and action should be in italic, do not admit you are a AI or anything related to AI, just act as a real person, do not talk to your self, ${userInfo}, it is not neccessery for the character to know the user information on the begining, ${incontent}`
       }
 
     ]
@@ -162,7 +237,7 @@
     sendData(log)
     renderChatLog();
   </script>
-  <script src="https://cdn.jsdelivr.net/gh/MarketingPipeline/Markdown-Tag/markdown-tag.js"></script> 
+  <script src="https://cdn.jsdelivr.net/gh/MarketingPipeline/Markdown-Tag/markdown-tag.js"></script>
 
 
 </body>
