--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 
 
     <div class=" flex w-full gap-2 items-center justify-between">
-        <h1 class="text-2xl font-bold p-4">ChatKaroo (Beta)</h1>
+        <h1 class="text-xl font-bold p-4">ChatKaroo (Beta)</h1>
 
 
         <div class="flex items-center gap-4">
